<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <data>

        <variable
            name="mainVm"
            type="com.example.tailor.kandoraexpress.home.viewmodal.MainActivityVm"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_logo_dark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        app:font="@{@string/source_sans_pro_text_bold}" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        app:font="@{@string/source_sans_pro_text_bold}"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_purchase"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        app:font="@{@string/source_sans_pro_text_bold}"/>


    </LinearLayout>



</layout>