<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="inprogresVm"
            type="com.example.tailor.kandoraexpress.order.Inprogress.viewmodal.InProgrssTabVm" />
        <variable
            name="orderlist"
            type="com.example.tailor.kandoraexpress.order.modal.OrderList"/>


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_weight="1">


            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/order_id"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:font="@{@string/source_sans_text_semibold}" />


            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/customer_name"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:font="@{@string/source_sans_text_semibold}" />


                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Order_summary"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:font="@{@string/source_sans_text_semibold}" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_weight="1">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                 android:layout_gravity="center"
                android:textColor="@color/black"
                app:font="@{@string/source_sans_text_semibold}" />



            </LinearLayout>

        </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/in_progress_recycle_view">

            </android.support.v7.widget.RecyclerView>



        </LinearLayout>

    <!--    <ImageView
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_empty_orderstatus" />-->


    </RelativeLayout>

</layout>