<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editfrontVm"
            type="com.example.tailor.kandoraexpress.editcustomkandpora.tab.viewmodal.EditFrontVm" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/embroidery"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_embroidery_recycleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/side_lines"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_sidelines_recycleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/stitches"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_stitches_recycleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tarboosh"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_tarboosh_recycleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />



                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/save_kandora_style"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/blue"
                    android:layout_marginBottom="20dp"
                    app:font="@{@string/source_sans_pro_text_bold}" />

            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>