<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dispatchVm"
            type="com.example.tailor.kandoraexpress.order.dispatch.viewmodal.DispatchVm"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/orderviewdetails_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/border"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:text="@string/order_id"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:font="@{@string/source_sans_text_semibold}" />


                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:text="@string/customer_name"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:font="@{@string/source_sans_text_semibold}" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="@string/Order_summary"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:font="@{@string/source_sans_text_semibold}" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:font="@{@string/source_sans_text_semibold}" />


                    </LinearLayout>


                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/order_dispatch_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp">

                </android.support.v7.widget.RecyclerView>


            </LinearLayout>

        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>


</layout>