<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editfabricsVm"
            type="com.example.tailor.kandoraexpress.editcustomkandpora.tab.viewmodal.EditFabricsVm" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_fabrics_type"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_fabric_type_recycvleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/white_very_soft"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_white_soft_recycvleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/white_hard"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_white_hard_recycvleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/colored"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/source_sans_text_semibold}" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/edit_colored_recycvleview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                </android.support.v7.widget.RecyclerView>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/lightGrey"
                    android:layout_marginBottom="15dp"/>


            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>